@@ -1,3 +1,6 @@
+2006-03-22  Brian Matherly  <pez4brian@users.sourceforge.net>
+	* src/ScratchPad.py: Filter double drops in Windows.
+
 2006-03-22  Don Allingham  <don@gramps-project.org>
 	* src/ScratchPad.py: handle repositories
 	* 
